--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.github.kongchen</groupId>
-    <artifactId>swagger-maven-plugin</artifactId>
+    <artifactId>jakarta-swagger-maven-plugin</artifactId>
     <version>3.1.8</version>
     <packaging>maven-plugin</packaging>
     <name>Swagger Maven Plugin</name>
@@ -21,7 +21,7 @@
         <connection>scm:git:git@github.com:kongchen/swagger-maven-plugin.git</connection>
         <url>scm:git:git@github.com:kongchen/swagger-maven-plugin.git</url>
         <developerConnection>scm:git:git@github.com:kongchen/swagger-maven-plugin.git</developerConnection>
-        <tag>swagger-maven-plugin-3.1.8</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <developers>
@@ -52,9 +52,9 @@
 
     <properties>
         <!-- Settings -->
-        <java.version>1.6</java.version>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <java.version>11</java.version>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
         <maven.javadoc.failOnError>false</maven.javadoc.failOnError>
         <github.global.server>github</github.global.server>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -62,16 +62,17 @@
 
         <!-- Dependency versions -->
         <maven.version>2.2.1</maven.version>
-        <swagger.version>1.5.21</swagger.version>
-        <jackson.version>2.8.9</jackson.version>
+        <swagger-maven-plugin-jakarta-deps.version>1.6.2</swagger-maven-plugin-jakarta-deps.version>
+        <jackson.version>2.15.2</jackson.version>
         <log4j.version>1.2.16</log4j.version>
         <handlebars.version>1.3.2</handlebars.version>
         <commons-io.version>2.0.1</commons-io.version>
         <reflections.version>0.9.9</reflections.version>
         <springframework.version>4.3.7.RELEASE</springframework.version>
-        <commons-lang3.version>3.5</commons-lang3.version>
-        <version.jersey-server>1.13</version.jersey-server>
-        <version.javax.ws.rs-api>2.0.1</version.javax.ws.rs-api>
+        <commons-lang3.version>3.9</commons-lang3.version>
+        <version.jersey-server>3.1.9</version.jersey-server>
+        <version.jakarta.ws.rs-api>3.1.0</version.jakarta.ws.rs-api>
+        <version.jakarta.validation-api>3.0.2</version.jakarta.validation-api>
         <version.maven-plugin-annotations>3.3</version.maven-plugin-annotations>
         <!-- Test dependency versions -->
         <maven-testing-harness.version>1.3</maven-testing-harness.version>
@@ -80,22 +81,45 @@
         <json-unit.version>1.17.0</json-unit.version>
         <version.mockito-core>2.18.3</version.mockito-core>
         <version.hamcrest-library>1.3</version.hamcrest-library>
+        <version.jaxb>4.0.1</version.jaxb>
 
         <!-- Plugin versions -->
-        <version.maven-release-plugin>2.5.3</version.maven-release-plugin>
-        <version.plexus-component-metadata>1.5.5</version.plexus-component-metadata>
-        <version.maven-compiler-plugin>2.3.2</version.maven-compiler-plugin>
-        <version.maven-plugin-plugin>3.3</version.maven-plugin-plugin>
-        <version.animal-sniffer-plugin>1.14</version.animal-sniffer-plugin>
-        <version.maven-source-plugin>2.1.2</version.maven-source-plugin>
-        <version.maven-javadoc-plugin>2.7</version.maven-javadoc-plugin>
-        <version.maven-gpg-plugin>1.6</version.maven-gpg-plugin>
+        <version.maven-release-plugin>3.1.1</version.maven-release-plugin>
+        <version.plexus-component-metadata>2.2.0</version.plexus-component-metadata>
+        <version.maven-compiler-plugin>3.8.1</version.maven-compiler-plugin>
+        <version.maven-plugin-plugin>3.15.1</version.maven-plugin-plugin>
+        <version.animal-sniffer-plugin>1.24</version.animal-sniffer-plugin>
+        <version.maven-source-plugin>3.3.1</version.maven-source-plugin>
+        <version.maven-javadoc-plugin>3.11.1</version.maven-javadoc-plugin>
+        <version.maven-gpg-plugin>3.2.7</version.maven-gpg-plugin>
         <version.plexus-javadoc>1.0</version.plexus-javadoc>
-        <version.slf4j-nop>1.7.25</version.slf4j-nop>
-        <kotlin.version>1.2.61</kotlin.version>
+        <version.slf4j-nop>2.0.13</version.slf4j-nop>
+        <kotlin.version>1.9.25</kotlin.version>
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>jakarta.xml.bind</groupId>
+            <artifactId>jakarta.xml.bind-api</artifactId>
+            <version>4.0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
+            <version>${version.jakarta.validation-api}</version>
+        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>jakarta.xml.bind</groupId>-->
+<!--            <artifactId>jaxb-api</artifactId>-->
+<!--            <version>${version.jaxb}</version>-->
+<!--            <scope>test</scope>-->
+<!--        </dependency>-->
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-impl</artifactId>
+            <version>${version.jaxb}</version>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-artifact</artifactId>
@@ -137,17 +161,12 @@
             <artifactId>handlebars</artifactId>
             <version>${handlebars.version}</version>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>swagger-maven-plugin-jakarta-deps</artifactId>
+            <version>${swagger-maven-plugin-jakarta-deps.version}</version>
+        </dependency>
 
-        <dependency>
-            <groupId>io.swagger</groupId>
-            <artifactId>swagger-jaxrs</artifactId>
-            <version>${swagger.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>io.swagger</groupId>
-            <artifactId>swagger-servlet</artifactId>
-            <version>${swagger.version}</version>
-        </dependency>
         <dependency>
             <groupId>org.reflections</groupId>
             <artifactId>reflections</artifactId>
@@ -170,17 +189,13 @@
         </dependency>
 
         <dependency>
-            <groupId>javax.ws.rs</groupId>
-            <artifactId>javax.ws.rs-api</artifactId>
-            <version>${version.javax.ws.rs-api}</version>
+            <groupId>jakarta.ws.rs</groupId>
+            <artifactId>jakarta.ws.rs-api</artifactId>
+            <version>${version.jakarta.ws.rs-api}</version>
         </dependency>
+
         <dependency>
-            <groupId>io.swagger</groupId>
-            <artifactId>swagger-jersey-jaxrs</artifactId>
-            <version>${swagger.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.sun.jersey</groupId>
+            <groupId>org.glassfish.jersey.core</groupId>
             <artifactId>jersey-server</artifactId>
             <version>${version.jersey-server}</version>
         </dependency>
@@ -330,13 +345,13 @@
                 <configuration>
                     <signature>
                         <groupId>org.codehaus.mojo.signature</groupId>
-                        <artifactId>java16-sun</artifactId>
+                        <artifactId>java17</artifactId>
                         <version>1.0</version>
                     </signature>
                 </configuration>
                 <executions>
                     <execution>
-                        <id>check-java16-sun</id>
+                        <id>check-java17-sun</id>
                         <phase>test</phase>
                         <goals>
                             <goal>check</goal>
@@ -358,7 +373,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <jvmTarget>1.8</jvmTarget>
+                    <jvmTarget>11</jvmTarget>
                 </configuration>
             </plugin>
             <plugin>
